--- a/frontend/src/test.css
+++ b/frontend/src/test.css
@@ -2,9 +2,5 @@ html, body {
     width: 100%;
     height: 100%;
     margin: 0;
-    background-color: #fff;
-}
-
-.foo {
-    background-color: aquamarine;
+    background-color: #ddd;
 }
