--- a/frontend/src/test.css
+++ b/frontend/src/test.css
@@ -1,6 +1,6 @@
-html, body {
+html, body, #app{
     width: 100%;
     height: 100%;
     margin: 0;
-    background-color: #ddd;
+    overflow: hidden;
 }
