copy to clipboard when clicking id. and small refactoring

--- a/frontend/src/template/template.html
+++ b/frontend/src/template/template.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>Color Consensus</title>
 </head>
 <body>
-<div id="app"></div>
 </body>
 </html>
